add register styles

--- a/src/component/auth/styles/loginStyle.css
+++ b/src/component/auth/styles/loginStyle.css
@@ -1,6 +1,6 @@
 .main-login {
   position: relative;
-  padding: 0px;
+  padding-top: 30px;
   margin: 0px;
   min-height: 500px;
   justify-content: center;
