--- a/src/component/auth/styles/loginStyle.css
+++ b/src/component/auth/styles/loginStyle.css
@@ -18,6 +18,7 @@
   padding: 20px;
   margin-right: auto;
   margin-top: 30px;
+  margin-bottom: 15px;
   text-align: right;
   /* box-shadow: 5px 2px 15px rgba(255, 255, 255, 0.37); */
 }
@@ -39,6 +40,7 @@
 
 .form-box {
   background-color: rgba(251, 252, 253, 0.089);
+  padding-top: 20px;
   margin: 20px;
   border-radius: 35px;
   box-shadow: 5px 2px 15px rgba(255, 255, 255, 0.37);
