--- a/src/component/storerome/style.css
+++ b/src/component/storerome/style.css
@@ -28,3 +28,39 @@
   border-radius: 10%;
   transition: 1s;
 }
+
+.unR-box {
+  background-color: rgb(0, 0, 0);
+  max-width: 500px;
+  max-height: 300px;
+  margin: 30px auto 70px auto;
+  border-radius: 15px;
+}
+
+.unR-icon {
+  font-size: 3rem;
+  color: rgb(194, 194, 194);
+}
+.unR-text {
+  font-size: 1.2rem;
+  color: rgb(194, 194, 194);
+}
+
+table {
+  text-align: center;
+}
+th {
+  vertical-align: middle;
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+.exp-box {
+  text-align: justify;
+  max-height: 70px;
+  min-width: 100px;
+  overflow-y: scroll;
+}
+.table-box {
+  margin: auto;
+}
