--- a/src/component/storerome/style.css
+++ b/src/component/storerome/style.css
@@ -1,9 +1,3 @@
-.add,
-.edit {
-  border-radius: 50%;
-  align-items: center;
-}
-
 .s-icon {
   font-size: 5rem;
 }
@@ -15,35 +9,36 @@
   text-decoration: none;
   padding: 5px;
   display: block;
+  max-width: fit-content;
+  margin: auto;
 }
-.s-link:hover {
-  background-color: rgba(100, 132, 235, 0.534);
-  border-radius: 20%;
-  color: rgb(8, 55, 95);
-  transition: 0.7s;
+.unR-box-main {
+  min-height: 500px;
+  padding-top: 50px;
 }
-.s-link:not(:hover) {
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.308);
-  border-radius: 10%;
-  transition: 1s;
-}
-
 .unR-box {
   background-color: rgb(0, 0, 0);
   max-width: 500px;
   max-height: 300px;
-  margin: 30px auto 70px auto;
+  margin: auto;
   border-radius: 15px;
 }
 
+.unr-link-box {
+  max-width: fit-content;
+  background-color: antiquewhite;
+}
 .unR-icon {
   font-size: 3rem;
-  color: rgb(194, 194, 194);
+  color: rgb(88, 166, 255);
+}
+.unR-nav-link {
+  max-width: fit-content;
+  text-decoration: none;
 }
 .unR-text {
   font-size: 1.2rem;
-  color: rgb(194, 194, 194);
+  color: rgb(88, 166, 255);
 }
 
 table {
